--- a/htop.man
+++ b/htop.man
@@ -1,28 +1,27 @@
-Utilitario Unix 'htop'
+Unix utility 'htop'
 
-O utilitario Unix 'htop' e responsavel pela exibicao dos processos em execucao no sistema,
-atraves do nome das imagens em disco. O utilitario tambem exibe informacoes de memoria, informando
-ao usuario a quantidade de memoria em uso por processos do usuario e tambem o total de memoria
-instalada no computador.
+The Unix utility 'htop' is responsible for displaying the processes running on the system, through
+the name of the disk images. The utility also displays memory information, telling the user the
+amount of memory in use by user processes and also the total memory installed on the computer.
 
-USO DO UTILITARIO:
+USAGE:
 
 htop
 
-Nenhum parametro adicional e necessario.
+No additional parameters are required.
 
-Para mais informacoes, insira 'htop ?' ou 'htop --ajuda'.
+For more information, enter 'htop ?' or 'htop --help'.
 
-ATUALIZACAO:
+UPDATE:
 
-atop foi renomeado para htop no Hexagonix H2.
+atop has been renamed to htop on the Hexagonix H2.
 
-HISTORIA
+HISTORY
 
-Esse comando apareceu no Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 (2016-2021).
 
-AUTOR
+AUTHOR
 
 Felipe Miguel Nery Lunkes
 
-Hexagonix                               [2.1 17/11/2022]
+Hexagonix                           [2.1 11/17/2022]
