--- a/top.man
+++ b/top.man
@@ -1,23 +1,20 @@
-Utilitario Unix 'top'
+Unix utility 'top'
 
-O utilitario Unix 'top' e responsavel pela exibicao dos processos em execucao no sistema,
-atraves do nome das imagens em disco. O utilitario tambem exibe informacoes de memoria, informando
-ao usuario a quantidade de memoria em uso por processos do usuario e tambem o total de memoria
-instalada no computador.
+The Unix utility 'top' is responsible for displaying the processes running on the system, through
+the name of the disk images. The utility also displays memory information, telling to the user the
+amount of memory in use by user processes and also the total memory installed on the computer.
 
-USO DO UTILITARIO:
+USAGE:
 
 top
 
-Normalmente, as fontes apresentam a extensao '.fnt'.
+For more information, enter 'top ?' or 'top --help'.
 
-Para mais informacoes, insira 'top ?' ou 'top --ajuda'.
+HISTORY
 
-HISTORIA
+This command appeared in the Hexagonix H1 (2016-2021).
 
-Esse comando apareceu no Hexagonix H1 (2016-2021).
-
-AUTOR
+AUTHOR
 
 Felipe Miguel Nery Lunkes
 
