--- a/whoami.man
+++ b/whoami.man
@@ -1,27 +1,27 @@
-Utilitario Unix 'whaomi'
+Unix utility 'whaomi'
 
-O utilitario Unix 'whoami' e responsavel pela exibicao de informacoes do usuario atual do sistema
-que realizou login a partir do utilitario especifico.
-Para tanto, o utilitario pode receber parametros, com o objetivo de exibir informacoes especificas.
+The Unix utility 'whoami' is responsible for displaying information about the current user of the
+system who logged in.
+For this purpose, the utility can receive parameters, in order to display specific information.
 
-USO DO UTILITARIO:
+USAGE:
 
-whoami <parametro>
+whoami <parameter>
 
-Um parametro adicional pode ser fornecido, sendo eles:
+An additional parameter can be provided, namely:
 
- -u: Exibe apenas o nome do usuario registrado.
- -t: Exibe o nome, UID e se disponivel, o grupo do usuario registrado.
+ -u: Display only the registered username.
+ -t: Displays the registered user's name, UID and if available, group.
 
-Na ausencia de parametros, a opcao '-u' sera selecionada automaticamente.
+In the absence of parameters, the '-u' option will be selected automatically.
 
-Para mais informacoes, insira 'whoami ?' ou 'whoami --ajuda'.
+For more information, enter 'whoami ?' or 'whoami --help'.
 
-HISTORIA
+HISTORY
 
-Esse comando apareceu no Hexagonix H1 (2016-2021).
+This command appeared in the Hexagonix H1 (2016-2021).
 
-AUTOR
+AUTHOR
 
 Felipe Miguel Nery Lunkes
 
