License section in .man files

--- a/clear.man
+++ b/clear.man
@@ -21,4 +21,8 @@ AUTHOR
 
 Felipe Miguel Nery Lunkes
 
+LICENSE
+
+Licensed under BSD-3-Clause.
+
 Hexagonix                           [2.0 05/06/2022]
