--- a/license.man
+++ b/license.man
@@ -15,4 +15,8 @@ AUTHOR
 
 Felipe Miguel Nery Lunkes
 
+LICENSE
+
+Licensed under BSD-3-Clause.
+
 Hexagonix                           [1.0 04/12/2022]
