--- a/login.man
+++ b/login.man
@@ -21,4 +21,8 @@ AUTHOR
 
 Felipe Miguel Nery Lunkes
 
+LICENSE
+
+Licensed under BSD-3-Clause.
+
 Hexagonix                           [3.0 17/11/2022]
