--- a/logind.man
+++ b/logind.man
@@ -23,4 +23,8 @@ AUTHOR
 
 Felipe Miguel Nery Lunkes
 
+LICENSE
+
+Licensed under BSD-3-Clause.
+
 Hexagonix                               [3.0 17/11/2022]
