--- a/sh.man
+++ b/sh.man
@@ -25,4 +25,8 @@ AUTHOR
 
 Felipe Miguel Nery Lunkes
 
+LICENSE
+
+Licensed under BSD-3-Clause.
+
 Hexagonix                               [2.1 17/11/2022]
