--- a/fnt.man
+++ b/fnt.man
@@ -1,10 +1,10 @@
 Unix utility 'fnt'
 
-The Unix utility 'fnt' can be used to change the default display graphical font.
+The Unix utility 'fnt' can be used to change the default graphical font.
 
 USAGE:
 
-fnt <name of the file containing the graphic font>
+fnt <filename>
 
 Normally, fonts have the '.fnt' extension.
 
@@ -22,4 +22,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                           [2.0 05/06/2022]
+Hexagonix                           [2.1 12/01/2023]
