--- a/shutdown.man
+++ b/shutdown.man
@@ -10,10 +10,10 @@ shutdown <shutdown option>
 
 An additional parameter is required, namely:
 
- -d: Prepare to shutdown the computer.
- -r: prepares to restart the computer.
+ -d: Prepares to shutdown the computer.
+ -r: Prepares to restart the computer.
 
-Remember that from the entry of the parameter, the action starts immediately.
+Remember that after the entry of the parameter, the action starts immediately.
 
 For more information, enter 'shutdown ?' or 'shutdown --help'.
 
@@ -30,4 +30,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                               [2.0 31/12/2022]
+Hexagonix                               [2.1 12/01/2023]
