--- a/shutdown.man
+++ b/shutdown.man
@@ -12,6 +12,7 @@ An additional parameter is required, namely:
 
  -d: Prepares to shutdown the computer.
  -r: Prepares to restart the computer.
+ now: Same as -d parameter (compatible with FreeBSD and Linux).
 
 Remember that after the entry of the parameter, the action starts immediately.
 
@@ -30,4 +31,4 @@ LICENSE
 
 Licensed under BSD-3-Clause.
 
-Hexagonix                               [2.1 12/01/2023]
+Hexagonix                               [2.2 27/03/2023]
